<resources>
    <string name="app_name"> </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_Explore">探索</string>
    <string name="action_group">揪團</string>
    <string name="action_profile">個人頁面</string>
    <string name="action_notification">通知</string>
    <string name="action_setting">設定</string>
    <string name="tbTrip">行程</string>
    <string name="tbBlog">網誌</string>
    <string name="tbGoal">成就</string>
    <string name="create_new_trip">新增行程</string>
    <string name="create_trip">建立行程</string>
    <string name="Explore">探索</string>
    <string name="textNoNetwork">沒有網路連線</string>
    <string name="mDelete">Delete</string>
    <string name="mUpdate">Update</string>
    <string name="facebook_app_id">329545764829760</string>
    <string name="fb_login_protocol_scheme">fb329545764829760</string>
    <string name="textNoSpotsFound">找不到資料</string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <string name="thumbsup">按讚</string>
    <string name="triplist">行程</string>

    <string name="textLocName">景點名稱</string>
    <string name="textAddress">地址</string>
    <string name="textLocNameLength">請輸入景點名稱(限10個字元)</string>
    <string name="textAddressLength">請輸入景點地址</string>
    <string name="textStartTime">開始時間</string>
    <string name="textEndTime">結束時間</string>
    <string name="textDesc">景點描述</string>
    <string name="textAddImage">新增照片</string>
    <string name="textUpdate">更新</string>
    <string name="textDelete">刪除</string>
    <string name="textTakePic">拍照</string>
    <string name="textPickPic">挑選照片</string>

    <string name="trip_Title">行程標題：</string>
    <string name="enterTripTitle">請輸入標題名稱（限10字元）</string>
    <string name="TripStartDate">出發日期：</string>
    <string name="enterStartDate">請選擇日期</string>
    <string name="TripStartTime">出發時間：</string>
    <string name="enterStartTime">請選擇時間</string>
    <string name="btPickDate">點擊選擇日期</string>
    <string name="btPickTime">點擊選擇時間</string>
    <string name="daysChoose">選擇行程天數</string>
    <string name="btNext">下一步</string>
    <string name="showDay">天</string>
    <string name="LocName">景點名稱</string>
    <string name="LocAdd">景點地址</string>
    <string name="stayTimeSelect">選擇停留時間</string>
    <string name="hintStayTime">停留時間</string>
    <string name="LocationName">景點名稱</string>
    <string name="LocInfo">景點資料</string>
    <string name="memo">請輸入給該景點的備註</string>
    <string name="switchGroup">是否開啟揪團功能</string>
    <string name="CreateBlog">新增網誌</string>


    <string-array name="daysForTrip">
        <item>1 </item>
        <item>2 </item>
        <item>3 </item>
        <item>4 </item>
        <item>5 </item>
        <item>6 </item>
    </string-array>

    <!--    選擇揪團人數-->
    <string-array name="groupOfPeople">
        <item>1 </item>
        <item>2 </item>
        <item>3 </item>
        <item>4 </item>
        <item>5 </item>
        <item>6 </item>
        <item>7 </item>
        <item>8 </item>
        <item>9 </item>
        <item>10 </item>
    </string-array>

    <string name="group_prompt">"請選擇揪團人數："</string>
    <string name="chooseGroupPple">請選擇揪團人數：</string>
    <string name="addNewLoc">新增景點</string>
    <string name="memotitle">備註欄位：</string>
    <string name="textShowMore">行程備註</string>
    <string name="deleteLoc">刪除景點</string>
    <string name="cityname">請輸入城市名</string>
    <string name="homepageEdit">編輯行程</string>
    <string name="homepageDelete">刪除行程</string>
    <string name="btNextStep">下一步</string>
    <string name="textUpdateFail">留言失敗</string>
    <string name="textUpdateSuccess">留言成功</string>
    <string name="textDeleteFail">刪除失敗</string>
    <string name="textDeleteSuccess">網誌刪除成功</string>
    <string name="textDeleteCommentSuccess">刪除成功</string>
    <string name="textNameIsInvalid">留言不能空白</string>


</resources>