<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".trip.Main_Trip_Fragment">


    <ImageView
        android:id="@+id/ivBGPic"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/default_bg_pc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btChangePic"
        android:layout_width="24dp"
        android:layout_height="18dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="4dp"
        android:background="#00000000"
        android:src="@drawable/ic_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivUserPic"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="68dp"
        android:src="@drawable/ic_user_pic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="TextView"
        android:textColor="@color/colorForNormalText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivUserPic" />

    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabRippleColor="@color/colorAccent"
        app:tabBackground="@color/tab_bar_selected_color"
        app:tabIndicatorColor="@color/colorForWhite">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tbTrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tbTrip" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tbBlog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tbBlog" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tbGoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tbGoal" />
    </com.google.android.material.tabs.TabLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomBar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:itemBackground="@color/colorForBottomBar"
        app:itemIconTint="@color/bottom_bar_selected_color"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_bar_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>


