<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"></androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <ScrollView
            tools:context=".location.LocationInsertFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/insertLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivLocImage"
                    android:layout_width="95.2dp"
                    android:layout_height="95.2dp"
                    android:layout_marginStart="148dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="148dp"
                    android:layout_marginBottom="64dp"
                    android:src="@drawable/ic_nopicture"
                    app:layout_constraintBottom_toTopOf="@+id/tvLocName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvLocName"
                    android:layout_width="409dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="216dp"
                    android:hint="@string/textLocName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </TextView>

                <TextView
                    android:id="@+id/tvAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/textAddressLength"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tvLocName"
                    app:layout_constraintTop_toBottomOf="@+id/tvLocName" />

                <TextView
                    android:id="@+id/tvDesc"
                    android:layout_width="0dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/textDesc"
                    app:layout_constraintEnd_toEndOf="@+id/tvAddress"
                    app:layout_constraintStart_toStartOf="@+id/tvAddress"
                    app:layout_constraintTop_toBottomOf="@+id/tvAddress" />

                <ImageButton
                    android:id="@+id/ibBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/back_ui"
                    app:layout_constraintEnd_toEndOf="@+id/ivLocImage"
                    app:layout_constraintStart_toStartOf="@+id/ivLocImage"
                    app:layout_constraintTop_toBottomOf="@+id/tvDesc" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>